--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -5,7 +5,7 @@
     </div>
   {{ end }}
   <div class="posts">
-  <h2>Recent posts</h2>
+      <h2>Recent Blog Posts</h2>
     {{ $isntDefault := not (or (eq (trim $.Site.Params.contentTypeName " ") "posts") (eq (trim $.Site.Params.contentTypeName " ") "")) }}
     {{ $contentTypeName := cond $isntDefault (string $.Site.Params.contentTypeName) "posts" }}
 
@@ -13,9 +13,9 @@
     {{ if .IsHome }}
       {{ $PageContext = .Site }}
     {{ end }}
-    {{ $paginator := .Paginate (where $PageContext.RegularPages "Type" $contentTypeName) }}
+    {{ $posts := where ($PageContext.RegularPages.ByPublishDate.Reverse.Limit 5) "Type" $contentTypeName }}
 
-    {{ range $paginator.Pages }}
+    {{ range $posts }}
       <article class="post on-list">
         <h2 class="post-title">
           <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
@@ -61,7 +61,5 @@
         {{ end }}
       </article>
     {{ end }}
-
-    {{ partial "pagination.html" . }}
   </div>
 {{ end }}
