--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -48,7 +48,7 @@
     &:first-of-type {
         &:not(.from-open) {
             .collapsible-inner {
-                animation: bounce-tease 1s ease-in;
+                animation: bounce-tease 1s 0.5s ease-in-out;
             }
         }
     }
@@ -86,20 +86,8 @@
 }
 
 @keyframes bounce-tease {
-    70% {
+    75% {
         height: 5em;
-    }
-
-    90% {
-        height: 1em;
-    }
-
-    80% {
-        height: 1.8em;
-    }
-
-    97% {
-        height: 1.2em;
     }
 
     100% {
